--- a/themes/myflatly/assets/main.scss
+++ b/themes/myflatly/assets/main.scss
@@ -6,14 +6,17 @@
 $web-font-path: "https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap";
 
 $font-family-sans-serif:      Lato, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
-$h1-font-size:                3rem !default;
-$h2-font-size:                2.5rem !default;
-$h3-font-size:                2rem !default;
-$body-color:                $gray-900 !default;
+$h1-font-size:                2.5rem !default;
+$h2-font-size:                1.5rem !default;
+$h3-font-size:                1.1rem !default;
 
 
-@import "variables";
+
+@import "_variables";
+
+$body-color:                  $gray-800 ; 
+
 @import "bootstrap/bootstrap";
-@import "bootswatch";
+@import "_bootswatch";
 
 // Put overrides here where they are not using variables. 
