--- a/themes/myflatly/layouts/partials/head.html
+++ b/themes/myflatly/layouts/partials/head.html
@@ -5,7 +5,8 @@
 
     {{ $style := $sass | resources.ToCSS | resources.Fingerprint }}
     
-    <link rel="stylesheet" href="{{ $styles.Permalink }}" integrity="{{ $styles.Data.Integrity }}">
+    <link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     
     {{ $title := print .Site.Title " | " .Title }}
     <title>{{ $title }}</title>
