--- a/themes/myflatly/assets/main.scss
+++ b/themes/myflatly/assets/main.scss
@@ -2,10 +2,12 @@
 // $h1-font-size: 3rem;
 
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css");
+$web-font-path: "https://fonts.googleapis.com/css?family=Roboto:400,400italic,700,900&display=swap";
 
-$web-font-path: "https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap";
 
-$font-family-sans-serif:      Lato, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$font-family-sans-serif:      "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+
+
 $h1-font-size:                2.5rem !default;
 $h2-font-size:                1.5rem !default;
 $h3-font-size:                1.1rem !default;
@@ -19,4 +21,39 @@ $body-color:                  $gray-800 ;
 @import "bootstrap/bootstrap";
 @import "_bootswatch";
 
-// Put overrides here where they are not using variables. 
+// 
+// 
+
+blockquote{
+    font-size: 1.2rem;
+    width:60%;
+    margin: 1rem 1rem; 
+    font-style: normal;
+    padding:  1.2rem 1.2rem 1.2rem 3rem;
+    border-left:8px solid $success ;
+    line-height:1.6;
+    position: relative;
+    background: $gray-100;
+    color: $gray-700;
+  }
+  
+  blockquote::before{
+    content: "\201C";
+    color:   $success;
+    font-size:  4rem;
+    position: absolute;
+    left: 10px;
+    top:-10px;
+  }
+  
+  blockquote::after{
+    content: '';
+  }
+  
+  blockquote span{
+    display:block;
+    color: $gray-600;
+    font-style: italic;
+    font-weight: lighter;
+    margin-top:1em;
+  }
