--- a/themes/myflatly/layouts/_default/baseof.html
+++ b/themes/myflatly/layouts/_default/baseof.html
@@ -2,7 +2,7 @@
 <html>
     {{- partial "head.html" . -}}
     <body>
-        {{- partial "header.html" . -}}
+        {{- partial "nav.html" . -}}
         <div id="content" class="container" style="padding-top:3rem;">
         <div class="row">
         {{- block "main" . }}{{- end }}
@@ -10,7 +10,6 @@
         </div>
         </div>
         {{- partial "footer.html" . -}}
-
 
     <!-- this is for the bootstrap js. -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
