--- a/themes/myflatly/layouts/index.html
+++ b/themes/myflatly/layouts/index.html
@@ -1,10 +1,11 @@
 {{ define "main" }}
+ 
   <h1>{{.Title}}</h1>
   {{ with .Params.subtitle }}
   <span class="subtitle">{{.}}</span>
   {{ end }}
         
-  <div class="container">
+  <div class="container mt-2">
    <!-- Note that the content for index.html, as a sort of list page, will pull from content/_index.md -->
     {{.Content}}
   </div>
