--- a/themes/myflatly/layouts/_default/single.html
+++ b/themes/myflatly/layouts/_default/single.html
@@ -1,5 +1,7 @@
 {{ define "main" }}
 <h1 id="title">{{ .Title }}</h1>
+
+<!--put something in here if you don't want the date to be shown - make it a thing in the yaml. -->
 <h3 class="text-muted"> {{.Date.Format "Monday January 2"}} </h3>
 
 
