--- a/themes/myflatly/layouts/partials/nav.html
+++ b/themes/myflatly/layouts/partials/nav.html
@@ -18,10 +18,10 @@
         </ul>
         <ul class="navbar-nav ms-md-auto">
             <li class="nav-item li-navbar">
-              <a target="_blank" rel="noopener" class="nav-link" href="https://github.com/cronkitedata/"><i class="fa fa-github"></i>&nbsp;</a>
+              <a target="_blank" rel="noopener" class="nav-link" href="https://github.com/cronkitedata/"><i class="fab fa-github fa-lg"></i>&nbsp;</a>
             </li>
             <li class="nav-item li-navbar">
-              <a target="_blank" rel="noopener" class="nav-link" href="https://twitter.com/sarahcnyt"><i class="fa fa-twitter"></i> &nbsp;</a>
+              <a target="_blank" rel="noopener" class="nav-link" href="https://twitter.com/sarahcnyt"><i class="fab fa-twitter fa-lg"></i> &nbsp;</a>
             </li>
         </ul>
     </div>
