--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,4 @@
+/*It's too dark and is hard on the eyes. Trying a little lighter shade of text. */
 
 
 /* unsmush the lines but create a class to re-smush them in sidebar, nav*/
@@ -5,6 +6,7 @@ li {
    margin-top: .5rem;
 
 }
+
 
 
 li-m0 {
