--- a/themes/myflatly/assets/main.scss
+++ b/themes/myflatly/assets/main.scss
@@ -1,5 +1,5 @@
 // Your variable overrides can go here, e.g.:
-// $h1-font-size: 3rem;
+// $h1-font-size: 3rem; #5c5962;
 
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css");
 $web-font-path: "https://fonts.googleapis.com/css?family=Roboto:400,400italic,700,900&display=swap";
@@ -8,21 +8,24 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Roboto:400,400italic,70
 $font-family-sans-serif:      "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 
 
-$h1-font-size:                2.5rem !default;
-$h2-font-size:                1.5rem !default;
-$h3-font-size:                1.1rem !default;
-
+$h1-font-size:                2.5rem ;
+$h2-font-size:                1.5rem ;
+$h3-font-size:                1.1rem ;
+// I don't understand which of these it's using. Seems to be the plain one. 
+$bs-body-color:               #38daa4 !important; 
+$body-color:                  #494e52;
 
 
 @import "_variables";
-
-$body-color:                  $gray-800 ; 
-
 @import "bootstrap/bootstrap";
 @import "_bootswatch";
 
 // 
 // 
+
+.text-purple {
+  color: $purple
+}
 
 blockquote{
     font-size: 1.2rem;
