--- a/themes/myflatly/layouts/_default/single.html
+++ b/themes/myflatly/layouts/_default/single.html
@@ -1,5 +1,8 @@
 {{ define "main" }}
 <h1 id="title">{{ .Title }}</h1>
+{{ with .Params.subtitle }}
+<span class="subtitle">{{.}}</span>
+{{ end }}
 
 <!--put something in here if you don't want the date to be shown - make it a thing in the yaml. -->
 {{ if eq .Params.show_date true}}
