--- a/themes/myflatly/layouts/partials/nav.html
+++ b/themes/myflatly/layouts/partials/nav.html
@@ -1,20 +1,47 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary sticky-top py-0">
+  <!-- to align it with the text -->
   <div class="container-fluid">
 
-    <div class="navbar-header">
+    <div class="navbar-header p-0">
         <a class="navbar-brand" href="/">
-            <img src="/img/djlogo.png" height="50" class="d-inline-block" alt="data journ logo">
+            <img src="/img/djlogo.png" height="35" class="d-inline-block" alt="data journ logo">
         </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#theNavBar" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#theNavBar"
+            aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation" aria-lable="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     </div>
     
     <div class="collapse navbar-collapse" id="theNavBar">
-        <ul class="navbar-nav ms-1">
+        <ul class="navbar-nav me-auto">
             <li class="nav-item li-navbar">
                 <a  rel="noopener" class="nav-link" href="/"> <i class="fa fa-home fa-lg"></i></a>
             </li> 
+            {{ $currentPage := . }}
+            {{ range .Site.Menus.main }}
+                {{ if .HasChildren }}
+                    <li class="nav-item dropdown li-navbar">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown-{{ .Identifier }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        {{ .Name }}
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown-{{ .Identifier  }}">
+                            <ul>
+                              {{ range .Children }}
+                                <a class="dropdown-item" href="{{ .URL }}">
+                                   {{ .Name }}
+                                </a>
+                            </li>
+                            {{ end }}
+                        </div>
+                    </li>
+                {{ else }}
+                    <li class="nav-item li-navbar">
+                        <a class="nav-link" href="{{ .URL }}">
+                            {{ .Name }}
+                        </a>
+                    </li>
+                {{ end }}        
+            {{ end }}
         </ul>
         <ul class="navbar-nav ms-md-auto">
             <li class="nav-item li-navbar">
@@ -25,5 +52,7 @@
             </li>
         </ul>
     </div>
-</div>
+    </div>
 </nav>
+
+
