--- a/themes/myflatly/layouts/partials/nav.html
+++ b/themes/myflatly/layouts/partials/nav.html
@@ -45,6 +45,9 @@
         </ul>
         <ul class="navbar-nav ms-md-auto">
             <li class="nav-item li-navbar">
+                <a target="_blank" rel="noopener" class="nav-link" href="mailto:sarah.h.cohen@asu.edu"><i class="far fa-envelope fa-lg"></i> &nbsp;</a>
+              </li>
+            <li class="nav-item li-navbar">
               <a target="_blank" rel="noopener" class="nav-link" href="https://github.com/cronkitedata/"><i class="fab fa-github fa-lg"></i>&nbsp;</a>
             </li>
             <li class="nav-item li-navbar">
