--- a/themes/myflatly/layouts/partials/sidebar.html
+++ b/themes/myflatly/layouts/partials/sidebar.html
@@ -1,21 +1,38 @@
-<div class="container col-md-3 border-start  border-2 pt-4 ps-2">
-
-  <div class="alert alert-info opacity-75 fw-bold mb-3">
-     Important links
-  </div>
-  <p> <a href="https://asu.instructure.com/courses/92120/" class="link-info text-decoration-none ">Canvas</a></p>
-  <p> <a href="https://asu-2217-jmc465-75289.slack.com/" class="link-info text-decoration-none ">Slack </a></p>
-
+<div class="container col-md-3 border-start  border-2 pt-4 ps-2 d-print-none;">
    <!-- this already has a built in nav id=TableOfContents -->
   {{if .Params.toc }}
 
-  <div class="alert alert-info opacity-75 fw-bold">
+  <div class="alert alert-secondary opacity-75 fw-bold">
     On this page
   </div>
   {{.TableOfContents}}
 
   {{end}}
 
-  <p>  Put a few other links here and something else to keep them busy. </p>
+  <div  class="alert alert-secondary opacity-75 fw-bold mb-3">
+   Important links
+  </div>
+
+  <div class="container sidebar-links">
+ <p> <a href="https://asu.instructure.com/courses/92120/"   >Canvas</a></p>
+ <p> <a href="https://asu-2217-jmc465-75289.slack.com/" >Slack </a></p>
+ <p class="text-warning"> tk: Course textbook </p>
+</div>
+
+<!-- on the home page, put a list of all of the weeks. I will also have 
+     something on the weekly details link as an index, but this will save a click
+     when they first go to the site -->
+
+{{ if .IsHome }}
+
+<div  class="alert alert-secondary opacity-75 fw-bold mb-3">
+  Weekly pages
+</div>
+<div class="container sidebar-links">
+  <!-- put in here something that goes through the weeks and gets the number, the date, and the title. 
+       I think I can do it with weight to get it in the right order. or sort by date. -->
+</div>
+
+{{end}}
 
 </div>
