--- a/themes/myflatly/layouts/partials/sidebar.html
+++ b/themes/myflatly/layouts/partials/sidebar.html
@@ -19,20 +19,19 @@
  <p class="text-warning"> tk: Course textbook </p>
 </div>
 
-<!-- on the home page, put a list of all of the weeks. I will also have 
-     something on the weekly details link as an index, but this will save a click
-     when they first go to the site -->
+<!-- I discovered here that you can't comment out HUGO commands! They end up in commented rows. Sheesh. 
+     instead, you have to do something like {{/* range where...*/}}-->
 
-{{ if .IsHome }}
+  <div  class="alert alert-secondary opacity-75 fw-bold mb-3">
+    Weekly pages
+  </div>
+  <div class="container sidebar-links">
+   <ul class="list-unstyled">
+  {{ range  where .Site.RegularPages "Section" "weeks" }}
+        <li> <a href="{{ .Permalink }}"> {{ .Date.Format "1/2" }} - {{ .Title }}</a>  </li>
+  {{ end }}
+   </ul>
+   </div> 
 
-<div  class="alert alert-secondary opacity-75 fw-bold mb-3">
-  Weekly pages
-</div>
-<div class="container sidebar-links">
-  <!-- put in here something that goes through the weeks and gets the number, the date, and the title. 
-       I think I can do it with weight to get it in the right order. or sort by date. -->
-</div>
-
-{{end}}
 
 </div>
