fixed css and relative paths

--- a/themes/myflatly/layouts/partials/head.html
+++ b/themes/myflatly/layouts/partials/head.html
@@ -3,10 +3,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {{ $sass := resources.Get "main.scss" }}
 
-    {{ $style := $sass | resources.ToCSS | resources.Fingerprint }}
+    {{ $style := $sass | resources.ExecuteAsTemplate "style.main.scss" . | toCSS | minify  }}
     
     <link href="/img/favicon.ico" rel="icon" type="image/x-icon" />
-    <link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
+    <link rel="stylesheet" href="{{ $style.Permalink }}" >
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     
     {{ $title := print .Site.Title " | " .Title }}
