--- a/themes/myflatly/layouts/partials/head.html
+++ b/themes/myflatly/layouts/partials/head.html
@@ -5,9 +5,9 @@
 
     {{ $style := $sass | resources.ExecuteAsTemplate "style.main.scss" . | toCSS | minify  }}
     
-    <link href="/img/favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="/dataj/img/favicon.ico" rel="icon" type="image/x-icon" />
     <link rel="stylesheet" href="{{ $style.Permalink }}" >
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/dataj/css/style.css">
     
     {{ $title := print .Site.Title " | " .Title }}
     <title>{{ $title }}</title>
