--- a/themes/myflatly/layouts/partials/nav.html
+++ b/themes/myflatly/layouts/partials/nav.html
@@ -3,8 +3,8 @@
   <div class="container-fluid">
 
     <div class="navbar-header p-0">
-        <a class="navbar-brand" href="/">
-            <img src="/img/djlogo.png" height="35" class="d-inline-block" alt="data journ logo">
+        <a class="navbar-brand" href="/dataj/">
+            <img src="/dataj/img/djlogo.png" height="35" class="d-inline-block" alt="data journ logo">
         </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#theNavBar"
             aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation" aria-lable="Toggle navigation">
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="theNavBar">
         <ul class="navbar-nav me-auto">
             <li class="nav-item li-navbar">
-                <a  rel="noopener" class="nav-link" href="/"> <i class="fa fa-home fa-lg"></i></a>
+                <a  rel="noopener" class="nav-link" href="/dataj"> <i class="fa fa-home fa-lg"></i></a>
             </li> 
             {{ $currentPage := . }}
             {{ range .Site.Menus.main }}
