--- a/themes/myflatly/layouts/partials/sidebar.html
+++ b/themes/myflatly/layouts/partials/sidebar.html
@@ -1,4 +1,4 @@
-<div class="container col-md-3 border-start  border-2 pt-4 ps-2 d-print-none;">
+<div class="container col-md-3 border-start  border-2 pt-4 ps-2 d-print-none ">
    <!-- this already has a built in nav id=TableOfContents -->
   {{if .Params.toc }}
 
@@ -14,9 +14,10 @@
   </div>
 
   <div class="container sidebar-links">
+ <p> <a href="/dataj/syllabus/"> Syllabus </a>  and <a href="/dataj/schedule/">Schedule</a></p>
  <p> <a href="https://asu.instructure.com/courses/92120/"   >Canvas</a></p>
  <p> <a href="https://asu-2217-jmc465-75289.slack.com/" >Slack </a></p>
- <p class="text-warning"> tk: Course textbook </p>
+ <p> <a href="https://cronkitedata.github.io/djtextbook/"> Course textbook </a> </p>
 </div>
 
 <!-- I discovered here that you can't comment out HUGO commands! They end up in commented rows. Sheesh. 
