--- a/themes/myflatly/assets/_variables.scss
+++ b/themes/myflatly/assets/_variables.scss
@@ -44,6 +44,7 @@ $min-contrast-ratio:   2.05 !default;
 // Links
 
 $link-color:                $success !default;
+$alt-link-color:            #326891 !default;
 
 // Fonts
 
