--- a/themes/myflatly/layouts/partials/nav.html
+++ b/themes/myflatly/layouts/partials/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary sticky-top py-0">
   <!-- to align it with the text -->
-  <div class="container-fluid">
+  <div class="container">
 
     <div class="navbar-header p-0">
         <a class="navbar-brand" href="/dataj/">
