--- a/themes/myflatly/assets/main.scss
+++ b/themes/myflatly/assets/main.scss
@@ -3,7 +3,8 @@
 
 // Here's what they had in the link colors, and I didn't like it. So I changed it: 
 $alt-link-color:                         #326891 ;
-$link-color:                              $alt-link-color ;
+
+//  $link-color:                              $alt-link-color ;
 
 
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css");
@@ -29,14 +30,24 @@ $h4-font-size:                1.1rem;
 
 // 
 // THESE ARE MY CHANGES BASED ON THE VARIABLES LOADED ABOVE.
-$hover-color: $cyan ;
+// $hover-color: $cyan ;
 
 
-a:hover {
+/* a:hover {
   color: $hover-color;
 }
 
-h1 { 
+ */
+
+ .text-blue {
+   color: $blue
+ }
+
+ .text-altlink {
+   color: $alt-link-color
+ }
+ 
+ h1 { 
   font-weight:900;
 }
 
@@ -54,24 +65,23 @@ h4 {
 }
 
 blockquote {
-  border-left : 6px solid $success;
-  margin: .5rem 1rem;
-  padding: 1rem 1.2rem 1.2rem 3rem;
-  font-style: italic;
+  border-left: 2px solid $secondary;
   color: $gray-700;
+  font-style: italic;
 }
 
 .blockquote-big {
-    font-size: 1.2rem;
-    width:90%;
-    margin: .5rem 1rem; 
-    font-style: normal;
-    padding:  1rem 1.2rem 1.2rem 3rem;
-    border-left:6px solid $success ;
-    line-height:1.4;
-    position: relative;
-    background: $gray-100;
-    color: $gray-700;
+  margin: .5rem 1rem;
+  padding: 1rem 1.2rem 1.2rem 3rem;
+  font-style: italic;
+  font-size: 1.2rem;
+  width:90%;
+  font-style: normal;
+  border-left:6px solid $success ;
+  line-height:1.4;
+  position: relative;
+  background: $gray-100;
+  color: $gray-700;
   }
   
   .blockquote-big::before{
