--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -19,6 +19,11 @@ li-m0 {
    margin-top: 0;
 }
 
+/* Get rid of underlined links*/
+a { 
+   text-decoration: none;
+}
+
 h3 {
    font-weight: normal;
    color: #272b2b;
