--- a/themes/myflatly/assets/main.scss
+++ b/themes/myflatly/assets/main.scss
@@ -47,6 +47,10 @@ $h4-font-size:                1.1rem;
    color: $alt-link-color
  }
  
+a { 
+  text-decoration: none !important;
+}
+
  h1 { 
   font-weight:900;
 }
