Add week of Feb 7
Update announcement on attendance

feb 7

Added Week 5

Fix Week 5

Fix Week 5again

Prelim week 6

Replication update

Feb 28

--- a/themes/myflatly/layouts/_default/baseof.html
+++ b/themes/myflatly/layouts/_default/baseof.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     {{- partial "head.html" . -}}
-    <body>
+    <body style="padding-bottom:4rem;">
         {{- partial "nav.html" . -}}
         <div id="content" class="container" style="padding-top:3rem;">
         <div class="row">
